# QT_HELLO_WORLD_CMAKE

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
helloworld_autogen/EWIEGA46WW/: moc_mainwindow.cpp  qrc_resources.cpp
helloworld_autogen/include/: ui_mainwindow.h
